--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,20 @@ body{
                                  
 }
 .bgcolor-blu{
-    background-color: rgba(0,132,253,255) ;
+    background-color: rgba(0,132,253) ;
 }
 .row{
     max-width: 400px;
     width: 100%;
 
 }
-.container-header{
-    
-}
+
 .row-menu{
     display: flex;
     align-items: center;
     justify-content: space-between;
                                     
-                                    background-color: rgba(0,132,253,255);
+                                    background-color: rgba(0,132,253);
 }
 .column-menu{
     width: 20%;
@@ -49,6 +47,7 @@ body{
 /* SECTION BLU */
 .bgcolor-bianco{
     background-color: white;
+    padding-bottom: 40px;
 }
 .row-blu{
     display: flex;
@@ -63,27 +62,27 @@ body{
 
 .column-blu{
     width: 100%;
-    background-color: rgba(181,221,255,255);
-    padding: 10px 40px;
-    margin: 30px 0px;
-    border: 1px solid rgba(181,221,255,255);
+    background-color: rgba(181,221,255);
+    padding: 30px 40px;
+    margin: 20px 0px;
+    border: 1px solid rgba(181,221,255);
     border-radius: 20px;
 
                                     
 
 }                                
 .titolo-blu{
-    color: rgba(0,132,253,255);
+    color: rgba(0,132,253);
     padding: 20px 0px;
 
 }
 .paragrafo-blu{
     padding: 30px 0px;
     line-height: 30px;
-    color: rgba(92,112,130,255);
+    color: rgba(92,112,130);
 }
 .button-appstore{
-    background-color: rgba(0,132,253,255);
+    background-color: rgba(0,132,253);
     color: white;
     border: none;
     border-radius: 20px;
@@ -94,23 +93,69 @@ body{
     width: 100%;
     padding-top: 30px;
 }
+.icona-blu{
+    font-size: 100px;
+}
+.titolo-centrale, .icona-blu{
+    text-align: center;
+}
+.paragrafo-centrale{
+    text-align: center;
+}
 /* SECTION VIOLA*/
 .bgcolor-viola{
-    
+    background-color: rgba(151,146,228);
+    padding-bottom: 40px;
 }
 .row-viola{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     
-                                    height: 1000px;
-                                    background-color: blue;
+                                   
+                                    
 }
 .column-viola{
     width: 100%;
-                                    height: 400px;
-                                    background-color: brown;
-
+                                    
+                                    
+}
+.img-computer{
+    width: 100%;
+}
+.titolo-bianco{
+    color: white;
+    padding: 40px 0px;
+    font-size: 35px;
+}
+.paragrafo-bianco{
+    color: white;
+    line-height: 30px;
+    padding-bottom: 40px;
+}
+.viola-destra{
+    background-color: white;
+    border-radius: 60px;
+}
+.titolo-nero, .paragrafo-nero{
+    text-align: center;
+    padding: 20px 30px;
+}
+.paragrafo-nero{
+    line-height: 30px;
+    padding-bottom: 80px;
+}
+.freccia{
+    text-align: center;
+    position: relative;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    background-color: rgba(151,146,228) ;
+    color: rgba(62,61,89);
+    padding: 10px 15px;
+    font-size: 30px;
+    border-radius: 50%;
+    border: none;
 }
 
 
