--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ body{
 .viola-destra{
     background-color: white;
     border-radius: 60px;
+    text-align: center;
 }
 .titolo-nero, .paragrafo-nero{
     text-align: center;
@@ -168,10 +169,7 @@ body{
     padding-bottom: 80px;
 }
 .freccia{
-    text-align: center;
-    position: relative;
-    transform: translate(-50%, -50%);
-    left: 50%;
+    
     background-color: rgba(151,146,228) ;
     color: rgba(62,61,89);
     padding: 10px 15px;
@@ -343,14 +341,39 @@ body{
 
     /* SECTION BLU */
     /* SECTION VIOLA */
+    .row-viola{
+        max-width: 750px;
+        gap: 10px;
+    }
     .viola-sinistra{
-        width: 50%;
-                                        background-color: rgb(32, 52, 52);
+        width: calc(50% - 10px);
+        padding-top: 100px;
+        
+    }
+    .img-computer-sinistra{
+        padding: 30px 0px;
+    }
+    .paragrafo-bianco{
+        font-size: 12px;
+        line-height: 20px;
     }
     .viola-destra{
-        width: 50%;
-                                        background-color: rgb(34, 146, 146);
+        width: calc(50% - 10px);
+        text-align: center;
+        max-height: 60%;
+        position: relative;
+        top: 255px;
     }
+    .titolo-nero{
+        padding: 0px 30px;
+    }
+    .img-computer-destra{
+        width: 60%;
+    }
+    .paragrafo-nero{
+        padding-bottom: 0px;
+    }
+
 
     /* SECTION TESTIMONIALS*/
 
