--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
     background-color: rgba(0,132,253) ;
 }
 .row{
-    max-width: 400px;
+    max-width: 350px;
     width: 100%;
 
 }
@@ -148,7 +148,7 @@ body{
 .titolo-bianco{
     color: white;
     padding: 40px 0px;
-    font-size: 35px;
+    font-size: 30px;
 }
 .paragrafo-bianco{
     color: white;
@@ -159,6 +159,7 @@ body{
     background-color: white;
     border-radius: 60px;
     text-align: center;
+    padding-bottom: 20px;
 }
 .titolo-nero, .paragrafo-nero{
     text-align: center;
@@ -180,16 +181,36 @@ body{
 
 
 /* SECTION TESTIMONIALS*/
+.bgcolor-bianco{
+    background-color: white;
+}
 .row-testimonials{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-                                    height: 1500px;
-                                    background-color: crimson;
+    padding-top: 30px;
+                                    
+                                    
 }
 .column-testimonials{
     width: 100%;
-                                    height: 400px;
+    background-color: rgba(151,146,228,255);
+    margin-bottom: 30px;
+    border-radius: 20px;
+                                    
+}
+.column-partners{
+    text-align: center;
+    padding: 30px 10px;
+}
+.titolo-partners{
+    color: rgba(151,146,228,255);
+    font-size: 30px;
+    padding: 30px 0px;
+}
+.paragrafo-partners{
+    line-height: 25px;
+    font-size: 15px;
 }
 .row-name{
     width: 100%;
@@ -201,12 +222,27 @@ body{
 .col-img, .col-testimonianze{
     width: 100%; 
                                     height: 200px;
-                                    background-color: cyan;
+                                    
+}
+.col-img{
+    display: inline-block;
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.img-testimonial{
+    
+    height: 100%;
+    margin-left: -50px;
 }
 .col-testimonianza{
     width: 100%;
-                                    height: 200px;
-                                    background-color: green;
+                                       
+}
+.virgolette {
+    font-size: 80px;
 }
 
 
