--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ body{
     width: 100%;
     background-color: rgba(151,146,228,255);
     margin-bottom: 30px;
-    border-radius: 20px;
+    border-radius: 15%;
                                     
 }
 .column-partners{
@@ -243,7 +243,7 @@ body{
     text-align: center;
     width: 100%;
     color: white;
-    padding: 0px 20px;
+    padding: 40px 20px;
     line-height: 25px;
                                        
 }
@@ -256,21 +256,61 @@ body{
 
 
 /* SECTION BENEFITS*/
+.container-benefits {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .row-benefits{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-                                    height: 2000px;
-                                    background-color: darkslategrey;
+    background-color: rgba(151,146,228);
+                                    
 }
 .titolo-benefits{
-
+    color: white;
+    text-align: center;
+    font-size: 36px;
+    padding: 40px 0px;
 }
 
 .column-benefits{
     width: 100%;
-                                    height: 100px;
-                                    background-color: darkseagreen;
+    background-color: white;
+    border-radius: 20px;
+    margin-bottom: 30px;
+}
+.number, .sottotitolo{
+    color:rgba(151,146,228) ;
+}
+.number{
+    font-size: 40px;
+    padding:30px 20px;
+    
+}
+.sottotitolo{
+    font-size: 22px;
+    padding:0px 20px;
+    padding-bottom: 30px;
+}
+.vitae-suscipit{
+    color: rgba(92,112,130);
+    padding:0px 20px;
+    padding-bottom: 30px;
+    line-height: 25px;
+
+}
+.more{
+    padding: 10px 50px;
+    background-color: rgba(151,146,228);
+    border: none;
+    border-radius: 20px;
+    color: white;
+    font-weight: 600;
+    margin:0px 20px;
+    margin-bottom: 40px;
 }
 /* SECTION ABOUT US*/
 .row-aboutus{
@@ -345,18 +385,21 @@ body{
         text-align: start;
         padding-top: 30px;
     }
+    .column-testimonials{
+        border-radius: 20px;
+    }
 
 
     /* SECTION BENEFITS*/
     .row-benefits{
         gap: 10px;
-                                    height: 500px;
+                                    
     }
     .column-benefits{
         width: calc(100% / 2 - 10px);
 
     }
-
+  
     /* SECTION ABOUT US*/
     .row-aboutus{
                                     height: 300px;
@@ -434,8 +477,8 @@ body{
 
     /* SECTION BENEFITS */
     .row-benefits{
-        gap: 10px;
-                                    height: 200px;
+       
+                                   
     }
     .column-benefits{
         width: calc(100% / 3 - 10px);
